test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/storage_attr.sw
library;

pub struct S { }

impl S {
    #[storage(read = true, write = false)]
    pub fn not_ok() { }
}